Implement basic visualization of full moons
* Add lodash and moment
* Create a component for rendering the phases of the moon
* Set colors for moons and blue moons
* Fix sourcemaps in the webpack config

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -95,10 +95,18 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+html {
+  background-color: #112;
+  color: white;
+}
 
+svg circle {
+  fill: #D8D8CC;
+}
 
-
-
+svg .blue {
+  fill: #3186FF;
+}
 
 
 
