Add year labels to years with a blue moon
* Add a margin around the body
* Add two placeholder paragraphs describing the two different kinds
  of blue moons
* Add a mixin that implements the d3 margin convention
* Mixin the margin convention to the MoonPhases chart
* Add labels for all years that have at least one blue moon

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -100,15 +100,23 @@ html {
   color: white;
 }
 
+body {
+  margin: 0 15px;
+}
+
 svg circle {
   fill: #D8D8CC;
+  transition: fill 300ms ease;
 }
 
 svg .blue {
   fill: #3186FF;
 }
 
-
+svg .axis text {
+  fill: white;
+  font-size: 11pt;
+}
 
 
 
